# Large-Address-Aware-Patcher

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  set_laa.py
include/: gui.hpp  patcher.hpp  util.hpp
src/: gui.cpp  main.cpp  patcher.cpp  util.cpp
